--- a/automations.yaml
+++ b/automations.yaml
@@ -1,4 +1,4 @@
-- id: 'dishwasher'
+- id: dishwasher
   alias: Dishwasher test
   description: ''
   trigger:
@@ -14,120 +14,93 @@
       entity_id: media_player.kitchenmini
       message: the dishwasher is now {{states.sensor.dishwasher_dishwasher_job_state.state}}
   mode: single
-
-- id: 'homenotoccupied'
-  alias: "Home not occupied"
+- id: homenotoccupied
+  alias: Home not occupied
   initial_state: true
   trigger:
-    - platform: state
-      entity_id:
-        - device_tracker.julie_s20_ping
-        - device_tracker.pete_s20_ping
-      to: away
-  #condition:
-    #condition: and
-    #conditions:
-      # We're all away
-      #- condition: state
-      #  entity_id: input_boolean.julie_is_home
-      #  state: "off"
-      #- condition: state
-      #  entity_id: input_boolean.pete_is_home
-      #  state: "off"
+  - platform: state
+    entity_id:
+    - device_tracker.julie_s20_ping
+    - device_tracker.pete_s20_ping
+    to: away
   action:
-    - service: input_boolean.turn_off
-      entity_id: input_boolean.home_occupied
-
-- id: 'homeoccupied'
-  alias: "Home occupied"
+  - service: input_boolean.turn_off
+    entity_id: input_boolean.home_occupied
+- id: homeoccupied
+  alias: Home occupied
   initial_state: true
   trigger:
-    - platform: state
-      entity_id:
-        - device_tracker.julie_s20_ping
-        - device_tracker.pete_s20_ping
-      to: home
-  #condition:
-    #condition: and
-    #conditions:
-      # We're all away
-      #- condition: state
-      #  entity_id: input_boolean.julie_is_home
-      #  state: "on"
-      #- condition: state
-      #  entity_id: input_boolean.pete_is_home
-      #  state: "on"
+  - platform: state
+    entity_id:
+    - device_tracker.julie_s20_ping
+    - device_tracker.pete_s20_ping
+    to: home
   action:
-    - service: input_boolean.turn_on
-      entity_id: input_boolean.home_occupied
-
-- id: 'houseisawake'
-  alias: "House awake"
+  - service: input_boolean.turn_on
+    entity_id: input_boolean.home_occupied
+- id: houseisawake
+  alias: House awake
   initial_state: true
   trigger:
-    # Consider the house awake if I'm up, Pete is up, or the TV comes on after 03:00
-    - platform: state
-      entity_id:
-        - input_boolean.julie_is_awake
-        - input_boolean.jete_is_awake
-
-      to: "on"
+  - platform: state
+    entity_id:
+    - input_boolean.julie_is_awake
+    - input_boolean.jete_is_awake
+    to: 'on'
   condition:
-    - condition: time
-      after: "05:00:00"
+  - condition: time
+    after: 05:00:00
+  - condition: or
+    conditions:
     - condition: or
       conditions:
-        - condition: or
-          conditions:
-            - condition: state
-              entity_id: input_boolean.julie_is_home
-              state: "off"
-            - condition: and
-              conditions:
-                - condition: state
-                  entity_id: input_boolean.julie_is_awake
-                  state: "on"
-                - condition: state
-                  entity_id: input_boolean.julie_is_home
-                  state: "on"
-        - condition: or
-          conditions:
-            - condition: state
-              entity_id: input_boolean.pete_is_home
-              state: "off"
-            - condition: and
-              conditions:
-                - condition: state
-                  entity_id: input_boolean.pete_is_awake
-                  state: "on"
-                - condition: state
-                  entity_id: input_boolean.pete_is_home
-                  state: "on"
+      - condition: state
+        entity_id: input_boolean.julie_is_home
+        state: 'off'
+      - condition: and
+        conditions:
+        - condition: state
+          entity_id: input_boolean.julie_is_awake
+          state: 'on'
+        - condition: state
+          entity_id: input_boolean.julie_is_home
+          state: 'on'
+    - condition: or
+      conditions:
+      - condition: state
+        entity_id: input_boolean.pete_is_home
+        state: 'off'
+      - condition: and
+        conditions:
+        - condition: state
+          entity_id: input_boolean.pete_is_awake
+          state: 'on'
+        - condition: state
+          entity_id: input_boolean.pete_is_home
+          state: 'on'
   action:
-    - service: input_boolean.turn_off
-      entity_id: input_boolean.bedtime
-
-- id: 'housebedtime'
-  alias: "House Bedtime"
+  - service: input_boolean.turn_off
+    entity_id: input_boolean.bedtime
+- id: housebedtime
+  alias: House Bedtime
   initial_state: true
   trigger:
-    # Everybody is in bed
-    - platform: state
-      entity_id:
-        - input_boolean.julie_in_bed
-        - input_boolean.pete_in_bed
-      to: 'on'
+  - platform: state
+    entity_id:
+    - input_boolean.julie_in_bed
+    - input_boolean.pete_in_bed
+    to: 'on'
   action:
-    - service: notify.logfile
-      data:
-        message: "Bedtime: {{ states('input_boolean.julie_in_bed') }}/{{ states('input_boolean.Pete_in_bed') }}"
-    - service: notify.logfile
-      data:
-        message: "Bedtime: Everybody is in bed"
-    - service: input_boolean.turn_on
-      entity_id: input_boolean.bedtime
-
-- id: 'tempofficebelowoutside'
+  - service: notify.logfile
+    data:
+      message: 'Bedtime: {{ states(''input_boolean.julie_in_bed'') }}/{{ states(''input_boolean.Pete_in_bed'')
+        }}'
+  - service: notify.logfile
+    data:
+      message: 'Bedtime: Everybody is in bed'
+  - service: input_boolean.turn_on
+    entity_id: input_boolean.bedtime
+- id: tempofficebelowoutside
   alias: Temp Office Below outside
   description: ''
   trigger:
@@ -143,8 +116,7 @@
       entity_id: media_player.officemini
       message: The temperature outside is below the temp inside
   mode: single
-
-- id: 'waterplants'
+- id: waterplants
   alias: Water the Plant
   description: ''
   trigger:
@@ -164,8 +136,7 @@
       message: Please water the plant
       title: Plant
   mode: single
-
-- id: 'ninwishlist'
+- id: nintendowishlist
   alias: Nintendo WIshlist
   description: ''
   trigger:
@@ -176,24 +147,9 @@
   action:
   - service: notify.mobile_app_pete_s20
     data:
-      message: "THe game is on sale Nintendo"
+      message: THe game is on sale Nintendo
   mode: single
-
-- id: 'nintendowishlist'
-  alias: Nintendo WIshlist
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: binary_sensor.nintendo_wishlist_final_fantasy_viii_remastered
-    to: 'on'
-  condition: []
-  action:
-  - service: notify.mobile_app_pete_s20
-    data:
-      message: "THe game is on sale Nintendo"
-  mode: single
-
-- id: 'sharesgme'
+- id: sharesgme
   alias: 'Shares: GME'
   trigger:
   - platform: numeric_state
@@ -205,8 +161,7 @@
       entity_id: media_player.officemini
       message: The GME shares are below 200$
   mode: single
-
-- id: 'updatestock'
+- id: updatestock
   alias: 'Shares: Update prices'
   trigger:
   - platform: time_pattern
@@ -224,8 +179,7 @@
   action:
   - service: yahoofinance.refresh_symbols
   mode: single
-
-- id: 'julieinbed'
+- id: julieinbed
   alias: Julie in bed
   trigger:
   - platform: state
@@ -244,50 +198,46 @@
       after: '21:00:00'
       before: 05:00:00
   action:
-    - service: input_boolean.turn_on
-      entity_id: input_boolean.julie_in_bed
+  - service: input_boolean.turn_on
+    entity_id: input_boolean.julie_in_bed
   initial_state: true
-
-- id: 'julieisup'
-  alias: "Julie is Up"
+- id: julieisup
+  alias: Julie is Up
   initial_state: true
   trigger:
-    # Something gets unplugged
-    - platform: state
-      entity_id: binary_sensor.julie_s20_en_charge
-      to: 'off'
+  - platform: state
+    entity_id: binary_sensor.julie_s20_en_charge
+    to: 'off'
   condition:
-    - condition: and
-      conditions:
-        - condition: state
-          entity_id: input_boolean.julie_is_home
-          state: "on"
-        - condition: state
-          entity_id: input_boolean.julie_in_bed
-          state: "on"
-        - condition: time
-          after: "05:00:00"
-          before: "21:00:00"
+  - condition: and
+    conditions:
+    - condition: state
+      entity_id: input_boolean.julie_is_home
+      state: 'on'
+    - condition: state
+      entity_id: input_boolean.julie_in_bed
+      state: 'on'
+    - condition: time
+      after: 05:00:00
+      before: '21:00:00'
   action:
-    - service: input_boolean.turn_off
-      entity_id:
-        - input_boolean.julie_in_bed
-        - input_boolean.bedtime
-  
-- id: 'julieishome'
+  - service: input_boolean.turn_off
+    entity_id:
+    - input_boolean.julie_in_bed
+    - input_boolean.bedtime
+- id: julieishome
   alias: Julie Is Home
   description: ''
   mode: single
   trigger:
-    - platform: state
-      entity_id: device_tracker.julie_s20_ping
-      to: home
+  - platform: state
+    entity_id: device_tracker.julie_s20_ping
+    to: home
   condition: []
   action:
-    - service: input_boolean.turn_on
-      entity_id: input_boolean.julie_is_home
-
-- id: 'peteinbed'
+  - service: input_boolean.turn_on
+    entity_id: input_boolean.julie_is_home
+- id: peteinbed
   alias: Pete in bed
   trigger:
   - platform: state
@@ -309,59 +259,55 @@
   - service: input_boolean.turn_on
     entity_id: input_boolean.pete_in_bed
   initial_state: true
-
-- id: 'peteisup'
-  alias: "Pete is Up"
+- id: peteisup
+  alias: Pete is Up
   initial_state: true
   trigger:
-    # Something gets unplugged
-    - platform: state
-      entity_id: binary_sensor.pete_s20_is_charging
-      to: 'off'
+  - platform: state
+    entity_id: binary_sensor.pete_s20_is_charging
+    to: 'off'
   condition:
-    - condition: and
-      conditions:
-        - condition: state
-          entity_id: input_boolean.pete_is_home
-          state: "on"
-        - condition: state
-          entity_id: input_boolean.pete_in_bed
-          state: "on"
-        - condition: time
-          after: "05:00:00"
-          before: "21:00:00"
+  - condition: and
+    conditions:
+    - condition: state
+      entity_id: input_boolean.pete_is_home
+      state: 'on'
+    - condition: state
+      entity_id: input_boolean.pete_in_bed
+      state: 'on'
+    - condition: time
+      after: 05:00:00
+      before: '21:00:00'
   action:
-    - service: input_boolean.turn_off
-      entity_id:
-        - input_boolean.pete_in_bed
-        - input_boolean.bedtime
-
-- id: 'peteishome'
+  - service: input_boolean.turn_off
+    entity_id:
+    - input_boolean.pete_in_bed
+    - input_boolean.bedtime
+- id: peteishome
   alias: Pete Is Home
   description: ''
   mode: single
   trigger:
-    - platform: state
-      entity_id: device_tracker.pete_s20_ping
-      to: home
+  - platform: state
+    entity_id: device_tracker.pete_s20_ping
+    to: home
   condition: []
   action:
-    - service: input_boolean.turn_on
-      entity_id: input_boolean.pete_is_home
-  
-- id: 'hareloaded'
-  alias: "HA automations reloaded"
+  - service: input_boolean.turn_on
+    entity_id: input_boolean.pete_is_home
+- id: hareloaded
+  alias: HA automations reloaded
   initial_state: true
   trigger:
-    - platform: event
-      event_type: automation_reloaded
+  - platform: event
+    event_type: automation_reloaded
   action:
-    - service: notify.mobile_app_pete_s20
-      data:
-        message: "Automations on Server have been reloaded at {{ as_timestamp(now())|timestamp_local }} local"
-        title: HA automations reloaded
-  
-- id: 'harestart'
+  - service: notify.mobile_app_pete_s20
+    data:
+      message: Automations on Server have been reloaded at {{ as_timestamp(now())|timestamp_local
+        }} local
+      title: HA automations reloaded
+- id: harestart
   alias: Ha restart
   description: ''
   trigger:
@@ -375,20 +321,19 @@
   - data: {}
     service: homeassistant.restart
   mode: single
-  
 - id: start
-  alias: "HA started"
+  alias: HA started
   initial_state: true
   trigger:
     platform: homeassistant
     event: start
   action:
-    - service: notify.mobile_app_pete_s20
-      data:
-        message: "Home Assistant {{ states('sensor.latest_version') }} has started on Server ({{ as_timestamp(utcnow())|timestamp_utc }})"
-  
-- id: 'haupdate'
-  alias: 'HA Update Available Notifications'
+  - service: notify.mobile_app_pete_s20
+    data:
+      message: Home Assistant {{ states('sensor.latest_version') }} has started on
+        Server ({{ as_timestamp(utcnow())|timestamp_utc }})
+- id: haupdate
+  alias: HA Update Available Notifications
   initial_state: true
   trigger:
     platform: state
@@ -396,136 +341,8 @@
   action:
     service: notify.logfile
     data:
-      message: 'SENDME SYSTEM Update for Home Assistant is available on Vision.'
-  
-- id: 'seasonautum'
-  alias: 'Season is autumn'
-  initial_state: true
-  trigger:
-    - platform: homeassistant
-      event: start
-    - platform: time
-      at: '03:00:00'
-  condition:
-    - condition: template
-      value_template: '{{ 12 > now().month > 8  }}'
-    - condition: not
-      conditions:
-      - condition: state
-        entity_id: input_select.season
-        state: 'Autumn'
-  action:
-    - service: input_select.select_option
-      data:
-        entity_id: input_select.season
-        option: Autumn
-
-- id: 'seasonchristas'
-  alias: 'Season is Christmas'
-  initial_state: true
-  trigger:
-    - platform: homeassistant
-      event: start
-    - platform: time
-      at: '02:00:00'
-  condition:
-    - condition: template
-      value_template: '{{ ( now().month == 1 and now().day < 7 ) or ( now().month == 12 and now().day >= 12 ) }}'
-    - condition: not
-      conditions:
-      - condition: state
-        entity_id: input_select.season
-        state: 'Christmas'
-  action:
-    - service: input_select.select_option
-      data:
-        entity_id: input_select.season
-        option: Christmas
-
-- id: 'sesaonissrpign'
-  alias: 'Season is spring'
-  initial_state: true
-  trigger:
-    - platform: homeassistant
-      event: start
-    - platform: time
-      at: '03:00:00'
-  condition:
-    - condition: and
-      conditions:
-      - condition: template
-        value_template: '{{ 6 > now().month > 2  }}'
-    - condition: not
-      conditions:
-      - condition: state
-        entity_id: input_select.season
-        state: 'Spring'
-  action:
-    - service: input_select.select_option
-      data:
-        entity_id: input_select.season
-        option: Spring
-
-- id: ' seasonissummer'
-  alias: 'Season is summer'
-  initial_state: true
-  trigger:
-    - platform: homeassistant
-      event: start
-    - platform: time
-      at: '03:00:00'
-  condition:
-    - condition: template
-      value_template: '{{ 9 > now().month > 5  }}'
-    - condition: not
-      conditions:
-      - condition: state
-        entity_id: input_select.season
-        state: 'Summer'
-  action:
-    - service: input_select.select_option
-      data:
-        entity_id: input_select.season
-        option: Summer
-  
-- id: 'seasonwinter'
-  alias: 'Season is winter'
-  initial_state: true
-  trigger:
-    - platform: homeassistant
-      event: start
-    - platform: time
-      at: '03:00:00'
-  condition:
-    - condition: not
-      conditions:
-      - condition: state
-        entity_id: input_select.season
-        state: 'Winter'
-    - condition: template
-      value_template: '{{ ( now().month == 12 ) or ( now().month < 3 ) }}'
-    - condition: or
-      conditions:
-      # Either after the 7th of January
-      - condition: template
-        value_template: '{{ now().month == 1 and now().day >= 7 }}'
-      - condition: and
-        conditions:
-        # before the 12th of January and we've not turned it on early
-        - condition: template
-          value_template: '{{ now().month == 12 and now().day < 12 }}'
-        - condition: not
-          conditions:
-          - condition: state
-            entity_id: input_select.season
-            state: 'Christmas'
-  action:
-    - service: input_select.select_option
-      data:
-        entity_id: input_select.season
-        option: Winter
-  
-- id: 'rainalertoff'
+      message: SENDME SYSTEM Update for Home Assistant is available on Vision.
+- id: rainalertoff
   alias: Rain Alert Bool Turn Off
   description: ''
   trigger:
@@ -540,8 +357,7 @@
     target:
       entity_id: input_boolean.rain_tomorrow
   mode: single
-  
-- id: 'rainaleron'
+- id: rainaleron
   alias: Rain Alert Bool Turn On
   description: ''
   trigger:
@@ -556,8 +372,7 @@
     target:
       entity_id: input_boolean.rain_tomorrow
   mode: single
-
-- id: 'rainalert'
+- id: rainalert
   alias: Rain Alert
   description: ''
   trigger:
@@ -573,4 +388,25 @@
       message: Rain is expected, close the window
   variables:
     days: 4
+  mode: single
+- id: update_morning_commute_sensor
+  alias: Commute - Update morning commute to coveo
+  trigger:
+  - platform: time_pattern
+    minutes: /10
+  condition:
+  - condition: time
+    after: 06:00:00
+    before: 08:00:00
+    weekday:
+    - mon
+    - tue
+    - wed
+    - thu
+    - fri
+  action:
+  - service: homeassistant.update_entity
+    target:
+      entity_id: sensor.to_coveo
+  initial_state: 'on'
   mode: single
