--- a/sensors.yaml
+++ b/sensors.yaml
@@ -160,7 +160,25 @@
 - platform: season
 
 # https://www.home-assistant.io/integrations/qbittorrent/
-#- platform: qbittorrent
-#  url: "http://<hostname>:<port>"
-#  username: YOUR_USERNAME
-#  password: YOUR_PASSWORD
+- platform: qbittorrent
+  url: !secret qtorrent_port
+  username: !secret qtorrent_user
+  password: !secret qtorrent_pw
+
+- platform: plex_recently_added
+  name: Recently Added Movies # will create sensor.recently_added_movies
+  token: !secret plex_token
+  host: !secret machine_ip
+  port: 32400
+  section_types:
+    - movie
+
+- platform: plex_recently_added
+  name: Recently Added TV  # will create sensor.recently_added_tv
+  token: !secret plex_token
+  host: !secret machine_ip
+  port: 32400
+  section_types:
+    - show
+  exclude_keywords:
+    - kardashian
