I transformed a bug into a feature. Once you learn how, you'll never forget it

--- a/sensors.yaml
+++ b/sensors.yaml
@@ -1,7 +1,6 @@
 - platform: uptime
-  name: Hassio Uptime
+  name: Home Assistant Uptime
 
-# Example configuration.yaml entry
 - platform: systemmonitor
   resources:
     - type: disk_use_percent
