--- a/automations.yaml
+++ b/automations.yaml
@@ -1518,7 +1518,9 @@
   action:
   - service: light.turn_off
     target:
-      entity_id: light.office_lamp
+      entity_id:
+      - light.office_lamp
+      - light.office_rgb
   - delay:
       hours: 0
       minutes: 0
@@ -1526,10 +1528,11 @@
       milliseconds: 0
   - service: light.turn_on
     target:
-      entity_id: light.office_lamp
+      entity_id:
+      - light.office_lamp
+      - light.office_rgb
     data:
       color_name: green
-      flash: long
       brightness_pct: 100
   mode: single
 - id: '1638234842814'
@@ -1556,7 +1559,9 @@
   action:
   - service: light.turn_off
     target:
-      entity_id: light.office_lamp
+      entity_id:
+      - light.office_lamp
+      - light.office_rgb
   - delay:
       hours: 0
       minutes: 0
@@ -1564,7 +1569,9 @@
       milliseconds: 0
   - service: light.turn_on
     target:
-      entity_id: light.office_lamp
+      entity_id:
+      - light.office_lamp
+      - light.office_rgb
     data:
       color_name: red
       brightness_pct: 100
